# voxellaneous

./: README.md
voxellaneous-core/: Cargo.toml
voxellaneous-core/src/: constants.rs  lib.rs  primitives.rs  scene.rs  utils.rs
voxellaneous-core/src/shaders/: quad_float.wgsl  quad_uint.wgsl  shader.wgsl
voxellaneous-web/: .prettierrc  index.html  package-lock.json  package.json  vite.config.ts
voxellaneous-web/src/: camera.ts  editor.ts  main.ts  map.ts  profiler-data.ts  scene.ts  style.css
voxellaneous-web/src/renderer/: editor.ts
voxellaneous-web/src/terrain/: editor.ts  generator.ts
voxellaneous-web/tests/: cornell-box.ts
