[package]
name = "voxellaneous-core"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wgpu = "22.1"
wasm-bindgen-futures = "0.4"
serde = "1.0.210"
serde-wasm-bindgen = "0.6.5"
web-sys = "0.3"
bytemuck = { version = "1.17", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
