[package]
name = "voxellaneous-core"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"

[profile.release]
opt-level = "z"
debug = false

[dependencies]
wasm-bindgen = "0.2"
wgpu = "25"
wasm-bindgen-futures = "0.4"
serde = "1.0"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }
bytemuck = { version = "1.17", features = ["derive"] }

[lib]
crate-type = ["cdylib"]
